tests/ui/feature-gates/feature-gate-no_core.stderr
error[E0658]: the `#[no_core]` attribute is an experimental feature
  --> $DIR/feature-gate-no_core.rs:3:1
   |
LL | #![no_core]
   | ^^^^^^^^^^^
   |
   = note: see issue #29639 <https://github.com/crablang/crablang/issues/29639> for more information
   = help: add `#![feature(no_core)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
